// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextLink should render with chevron 1`] = `
<a
  className="link"
>
  Google
  <Icon
    animation=""
    className="chevron"
    lineHeight=""
    rotation="90deg"
    size="small"
    smoothRotate={false}
    svgClassName="chevronSvg"
    type="chevron"
  />
</a>
`;

exports[`TextLink should render with children 1`] = `
<a
  className="link"
>
  Google
</a>
`;

exports[`TextLink should render with className 1`] = `
<a
  className="link foo"
/>
`;

exports[`TextLink should render with defaults 1`] = `
<a
  className="link"
/>
`;
